clusters/cl01/apps/home/hass-external/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hass-external
  namespace: home
spec:
  type: ExternalName
  externalName: hass.int.vxsan.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hass-external
  namespace: home
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "web"
    hajimari.io/appName: "traefik"

#    traefik.ingress.kubernetes.io/router.middlewares: "networking-external-auth@kubernetescrd" 
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"    

    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"

    external-dns/is-public: "true"
    external-dns.alpha.kubernetes.io/target: "home.${SECRET_DOMAIN}"
   

spec:
  tls:
    - hosts:
        - "hass.${SECRET_DOMAIN}"
      secretName: "hass.${SECRET_DOMAIN/./-}-tls"
  rules:
    - host: "hass.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hass-external
                port:
                  number: 8123
